# PDF-Organiser

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  traces.0  traces.1
data/: Makefile.am  Makefile.in  pdforganiser.desktop
pixmaps/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  context_menu.cpp  context_menu.h  loaddata.cpp  loaddata.h  main.cpp  main.h  scan.cpp  scan.h  treeview.cpp  treeview.h  utils.h  window_gui.cpp  window_gui.h
