# what flags you want to pass to the C compiler & linker
AM_CXXFLAGS = --pedantic -std=c++11 -O3  @GTK_CFLAGS@  @JSONGLIB_CFLAGS@
AM_LDFLAGS =   @GTK_LIBS@  @JSONGLIB_LIBS@
bin_PROGRAMS = pdforganiser
pdforganiser_SOURCES = context_menu.cpp loaddata.cpp main.cpp scan.cpp treeview.cpp utils.cpp window_gui.cpp context_menu.h loaddata.h main.h scan.h treeview.h utils.h window_gui.h
